# practicum-back-rm

./: .gitignore
.github/workflows/: main.yml
sprint1/problems/async_server/solution/src/: http_server.cpp  http_server.h  main.cpp
sprint1/problems/final_task/solution/: Dockerfile
sprint1/problems/final_task/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  model.h  request_handler.cpp  request_handler.h
sprint1/problems/map_json/solution/src/: http_server.cpp  json_loader.cpp  main.cpp  request_handler.h
sprint1/problems/radio/precode/src/: main.cpp
sprint1/problems/restaurant_multi_threaded/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/seabattle/precode/src/: main.cpp
sprint1/problems/sync_server/solution/src/: main.cpp
sprint1/samples/http-server/: CMakeLists.txt
sprint1/samples/http-server/src/: main.cpp
sprint1/samples/tcp-udp/: tcp_client.cpp  tcp_server.cpp  udp_client.cpp  udp_server.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/command_line/solution/src/: api_handler.cpp  api_handler.h  game_handler.h  (+11 more)
sprint2/problems/game_state/solution/: Dockerfile
sprint2/problems/join_game/solution/: CMakeLists.txt
sprint2/problems/join_game/solution/src/: api_handler.cpp  api_handler.h  http_server.cpp  json_loader.cpp  magic_defs.h  model.h  request_handler.cpp  response.cpp  response.h  url_handler.cpp
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/static_content/solution/: Dockerfile
sprint3/problems/flamegraph/solution/: perf.data
sprint3/problems/instrumentation/solution/: report
(+41 files in other folders)
